Reword installer welcome

--- a/package/welcome.html
+++ b/package/welcome.html
@@ -11,20 +11,18 @@ body { font-family: Helvetica, Sans-Serif; }
 </head>
 <body>
 
-<p>These packages contains the tools for working with the srcML format, including:</p>
+<p>This set of packages includes tools for efficiently working with the srcML format, including: </p>
 
-<p>
 <ul>
-<li>Converting source code to srcML, whether a single file, entire project, or code fragment (e.g., individual if statement)</li>
-<li>Converting srcML back to source code with no loss of whitespace, formatting, etc.</li>
+<li>Convert source code to srcML, whether a single file, entire project, or code fragment (e.g., individual if statement)</li>
+<li>Convert srcML back to source code without losing whitespace, formatting, etc.</li>
 <li>Perform queries on source code using XPath and RelaxNG</li>
 <li>Perform transformations on source code using XSLT</li>
 </ul>
-</p>
 
-<p>The primary package is for the srcml command-line client. The second package, Development, allows you to build srcML capabilities direct into your application.</p>
+<p>The first package includes the srcml command-line client, while the second package, called Development, enables the integration of srcML features into your own application.</p>
 
-<p>You can find more information at <a href="http://www.srcML.org">srcML.org</a></p>
+<p>For further details, visit <a href="http://www.srcML.org">srcML.org</a></p>
 
 </body>
 </html>
