Change wording after install

--- a/package/installed.html
+++ b/package/installed.html
@@ -40,7 +40,7 @@ srcml --verbose project -o project.xml
 
 <!-- <h2>libsrcml</h2> -->
 
-<p>If you installed the libsrcml development package, you have the ability to write applications that directly use libsrcml. This includes the following:
+<p>If you installed the libsrcml development package, you have the ability to write applications that directly use libsrcml. This contains the following:
 </p>
 
 <ul>
